@@ -8,11 +8,10 @@ import java.util.function.Consumer;
 import java.util.function.Function;
 import java.util.function.Predicate;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 
 import javax.annotation.Nonnull;
+import javax.annotation.ParametersAreNonnullByDefault;
 
-import com.google.common.base.Predicates;
 import com.simibubi.create.AllBlocks;
 import com.simibubi.create.AllFluids;
 import com.simibubi.create.AllItems;
@@ -27,6 +26,7 @@ import com.simibubi.create.compat.jei.category.FanBlastingCategory;
 import com.simibubi.create.compat.jei.category.FanHauntingCategory;
 import com.simibubi.create.compat.jei.category.FanSmokingCategory;
 import com.simibubi.create.compat.jei.category.FanWashingCategory;
+import com.simibubi.create.compat.jei.category.ItemApplicationCategory;
 import com.simibubi.create.compat.jei.category.ItemDrainCategory;
 import com.simibubi.create.compat.jei.category.MechanicalCraftingCategory;
 import com.simibubi.create.compat.jei.category.MillingCategory;
@@ -41,6 +41,7 @@ import com.simibubi.create.compat.jei.category.SequencedAssemblyCategory;
 import com.simibubi.create.compat.jei.category.SpoutCategory;
 import com.simibubi.create.content.contraptions.components.crafter.MechanicalCraftingRecipe;
 import com.simibubi.create.content.contraptions.components.deployer.DeployerApplicationRecipe;
+import com.simibubi.create.content.contraptions.components.deployer.ManualApplicationRecipe;
 import com.simibubi.create.content.contraptions.components.press.MechanicalPressTileEntity;
 import com.simibubi.create.content.contraptions.components.saw.SawTileEntity;
 import com.simibubi.create.content.contraptions.fluids.potion.PotionFluid;
@@ -49,15 +50,17 @@ import com.simibubi.create.content.contraptions.processing.BasinRecipe;
 import com.simibubi.create.content.curiosities.tools.BlueprintScreen;
 import com.simibubi.create.content.logistics.item.LinkedControllerScreen;
 import com.simibubi.create.content.logistics.item.filter.AbstractFilterScreen;
+import com.simibubi.create.content.logistics.trains.management.schedule.ScheduleScreen;
 import com.simibubi.create.foundation.config.AllConfigs;
 import com.simibubi.create.foundation.config.CRecipes;
 import com.simibubi.create.foundation.config.ConfigBase.ConfigBool;
+import com.simibubi.create.foundation.data.recipe.LogStrippingFakeRecipes;
 import com.simibubi.create.foundation.gui.container.AbstractSimiContainerScreen;
 import com.simibubi.create.foundation.utility.recipe.IRecipeTypeInfo;
 
 import mezz.jei.api.IModPlugin;
 import mezz.jei.api.JeiPlugin;
-import mezz.jei.api.constants.VanillaRecipeCategoryUid;
+import mezz.jei.api.constants.RecipeTypes;
 import mezz.jei.api.recipe.category.IRecipeCategory;
 import mezz.jei.api.registration.IGuiHandlerRegistration;
 import mezz.jei.api.registration.IRecipeCatalystRegistration;
@@ -79,6 +82,7 @@ import net.minecraftforge.fml.ModList;
 
 @JeiPlugin
 @SuppressWarnings("unused")
+@ParametersAreNonnullByDefault
 public class CreateJEI implements IModPlugin {
 
 	private static final ResourceLocation ID = Create.asResource("jei_plugin");
@@ -90,148 +94,154 @@ public class CreateJEI implements IModPlugin {
 		allCategories.clear();
 		CreateRecipeCategory<?>
 
-		milling = register("milling", MillingCategory::new).addTypedRecipes(AllRecipeTypes.MILLING)
-			.catalyst(AllBlocks.MILLSTONE::get)
-			.build(),
+				milling = register("milling", MillingCategory::new)
+						.addTypedRecipes(AllRecipeTypes.MILLING)
+						.catalyst(AllBlocks.MILLSTONE::get)
+						.build(),
 
-			crushing = register("crushing", CrushingCategory::new).addTypedRecipes(AllRecipeTypes.CRUSHING)
-				.addTypedRecipesExcluding(AllRecipeTypes.MILLING::getType, AllRecipeTypes.CRUSHING::getType)
-				.catalyst(AllBlocks.CRUSHING_WHEEL::get)
-				.build(),
+				crushing = register("crushing", CrushingCategory::new)
+						.addTypedRecipes(AllRecipeTypes.CRUSHING)
+						.addTypedRecipesExcluding(AllRecipeTypes.MILLING::getType, AllRecipeTypes.CRUSHING::getType)
+						.catalyst(AllBlocks.CRUSHING_WHEEL::get)
+						.build(),
 
-			pressing = register("pressing", PressingCategory::new).addTypedRecipes(AllRecipeTypes.PRESSING)
-				.catalyst(AllBlocks.MECHANICAL_PRESS::get)
-				.build(),
+				pressing = register("pressing", PressingCategory::new)
+						.addTypedRecipes(AllRecipeTypes.PRESSING)
+						.catalyst(AllBlocks.MECHANICAL_PRESS::get)
+						.build(),
 
-			washing = register("fan_washing", FanWashingCategory::new).addTypedRecipes(AllRecipeTypes.SPLASHING)
-				.catalystStack(ProcessingViaFanCategory.getFan("fan_washing"))
-				.build(),
+				washing = register("fan_washing", FanWashingCategory::new)
+						.addTypedRecipes(AllRecipeTypes.SPLASHING)
+						.catalystStack(ProcessingViaFanCategory.getFan("fan_washing"))
+						.build(),
 
-			smoking = register("fan_smoking", FanSmokingCategory::new).addTypedRecipes(() -> RecipeType.SMOKING)
-				.catalystStack(ProcessingViaFanCategory.getFan("fan_smoking"))
-				.build(),
+				smoking = register("fan_smoking", FanSmokingCategory::new)
+						.addTypedRecipes(() -> RecipeType.SMOKING)
+						.catalystStack(ProcessingViaFanCategory.getFan("fan_smoking"))
+						.build(),
 
-			blasting = register("fan_blasting", FanBlastingCategory::new)
-				.addTypedRecipesExcluding(() -> RecipeType.SMELTING, () -> RecipeType.BLASTING)
-				.addTypedRecipes(() -> RecipeType.BLASTING)
-				.removeRecipes(() -> RecipeType.SMOKING)
-				.catalystStack(ProcessingViaFanCategory.getFan("fan_blasting"))
-				.build(),
+				blasting = register("fan_blasting", FanBlastingCategory::new)
+						.addTypedRecipesExcluding(() -> RecipeType.SMELTING, () -> RecipeType.BLASTING)
+						.addTypedRecipes(() -> RecipeType.BLASTING)
+						.removeRecipes(() -> RecipeType.SMOKING)
+						.catalystStack(ProcessingViaFanCategory.getFan("fan_blasting"))
+						.build(),
 
-			haunting = register("fan_haunting", FanHauntingCategory::new).addTypedRecipes(AllRecipeTypes.HAUNTING)
-				.catalystStack(ProcessingViaFanCategory.getFan("fan_haunting"))
-				.build(),
+				haunting = register("fan_haunting", FanHauntingCategory::new).addTypedRecipes(AllRecipeTypes.HAUNTING)
+						.catalystStack(ProcessingViaFanCategory.getFan("fan_haunting"))
+						.build(),
 
-			mixing = register("mixing", MixingCategory::standard).addTypedRecipes(AllRecipeTypes.MIXING)
-				.catalyst(AllBlocks.MECHANICAL_MIXER::get)
-				.catalyst(AllBlocks.BASIN::get)
-				.build(),
+				mixing = register("mixing", MixingCategory::standard).addTypedRecipes(AllRecipeTypes.MIXING)
+						.catalyst(AllBlocks.MECHANICAL_MIXER::get)
+						.catalyst(AllBlocks.BASIN::get)
+						.build(),
 
-			seqAssembly = register("sequenced_assembly", SequencedAssemblyCategory::new)
-				.addTypedRecipes(AllRecipeTypes.SEQUENCED_ASSEMBLY)
-				.build(),
+				seqAssembly = register("sequenced_assembly", SequencedAssemblyCategory::new)
+						.addTypedRecipes(AllRecipeTypes.SEQUENCED_ASSEMBLY)
+						.build(),
 
-			autoShapeless = register("automatic_shapeless", MixingCategory::autoShapeless)
-				.addAllRecipesIf(r -> r instanceof CraftingRecipe && !(r instanceof IShapedRecipe<?>)
-					&& r.getIngredients()
-						.size() > 1
-					&& !MechanicalPressTileEntity.canCompress(r) && !AllRecipeTypes.shouldIgnoreInAutomation(r),
-					BasinRecipe::convertShapeless)
-				.catalyst(AllBlocks.MECHANICAL_MIXER::get)
-				.catalyst(AllBlocks.BASIN::get)
-				.enableWhen(c -> c.allowShapelessInMixer)
-				.build(),
+				autoShapeless = register("automatic_shapeless", MixingCategory::autoShapeless)
+						.addAllRecipesIf(r -> r instanceof CraftingRecipe && !(r instanceof IShapedRecipe<?>)
+										&& r.getIngredients()
+										.size() > 1
+										&& !MechanicalPressTileEntity.canCompress(r) && !AllRecipeTypes.shouldIgnoreInAutomation(r),
+								BasinRecipe::convertShapeless)
+						.catalyst(AllBlocks.MECHANICAL_MIXER::get)
+						.catalyst(AllBlocks.BASIN::get)
+						.enableWhen(c -> c.allowShapelessInMixer)
+						.build(),
 
-			brewing =
-				register("automatic_brewing", MixingCategory::autoBrewing).addRecipes(() -> PotionMixingRecipes.ALL)
-					.catalyst(AllBlocks.MECHANICAL_MIXER::get)
-					.catalyst(AllBlocks.BASIN::get)
-					.build(),
+				brewing = register("automatic_brewing", MixingCategory::autoBrewing).addRecipes(() -> PotionMixingRecipes.ALL)
+						.catalyst(AllBlocks.MECHANICAL_MIXER::get)
+						.catalyst(AllBlocks.BASIN::get)
+						.build(),
 
-			sawing = register("sawing", SawingCategory::new).addTypedRecipes(AllRecipeTypes.CUTTING)
-				.catalyst(AllBlocks.MECHANICAL_SAW::get)
-				.build(),
+				sawing = register("sawing", SawingCategory::new).addTypedRecipes(AllRecipeTypes.CUTTING)
+						.catalyst(AllBlocks.MECHANICAL_SAW::get)
+						.build(),
 
-			blockCutting =
-				register("block_cutting", () -> new BlockCuttingCategory(Items.STONE_BRICK_STAIRS))
-					.addRecipes(() -> CondensedBlockCuttingRecipe.condenseRecipes(getTypedRecipesExcluding(
-						RecipeType.STONECUTTING, recipe -> AllRecipeTypes.shouldIgnoreInAutomation(recipe))))
-					.catalyst(AllBlocks.MECHANICAL_SAW::get)
-					.enableWhen(c -> c.allowStonecuttingOnSaw)
-					.build(),
+				blockCutting = register("block_cutting", () -> new BlockCuttingCategory(Items.STONE_BRICK_STAIRS))
+						.addRecipes(() -> CondensedBlockCuttingRecipe.condenseRecipes(getTypedRecipesExcluding(RecipeType.STONECUTTING, AllRecipeTypes::shouldIgnoreInAutomation)))
+						.catalyst(AllBlocks.MECHANICAL_SAW::get)
+						.enableWhen(c -> c.allowStonecuttingOnSaw)
+						.build(),
 
-			woodCutting = register("wood_cutting", () -> new BlockCuttingCategory(Items.OAK_STAIRS))
-				.addRecipes(() -> CondensedBlockCuttingRecipe
-					.condenseRecipes(getTypedRecipesExcluding(SawTileEntity.woodcuttingRecipeType.get(),
-						recipe -> AllRecipeTypes.shouldIgnoreInAutomation(recipe))))
-				.catalyst(AllBlocks.MECHANICAL_SAW::get)
-				.enableWhenBool(c -> c.allowWoodcuttingOnSaw.get() && ModList.get()
-					.isLoaded("druidcraft"))
-				.build(),
+				woodCutting = register("wood_cutting", () -> new BlockCuttingCategory(Items.OAK_STAIRS))
+						.addRecipes(() -> CondensedBlockCuttingRecipe.condenseRecipes(getTypedRecipesExcluding(SawTileEntity.woodcuttingRecipeType.get(), AllRecipeTypes::shouldIgnoreInAutomation)))
+						.catalyst(AllBlocks.MECHANICAL_SAW::get)
+						.enableWhenBool(c -> c.allowWoodcuttingOnSaw.get() && ModList.get()
+								.isLoaded("druidcraft"))
+						.build(),
 
-			packing = register("packing", PackingCategory::standard).addTypedRecipes(AllRecipeTypes.COMPACTING)
-				.catalyst(AllBlocks.MECHANICAL_PRESS::get)
-				.catalyst(AllBlocks.BASIN::get)
-				.build(),
+				packing = register("packing", PackingCategory::standard).addTypedRecipes(AllRecipeTypes.COMPACTING)
+						.catalyst(AllBlocks.MECHANICAL_PRESS::get)
+						.catalyst(AllBlocks.BASIN::get)
+						.build(),
 
-			autoSquare = register("automatic_packing", PackingCategory::autoSquare)
-				.addAllRecipesIf(
-					r -> (r instanceof CraftingRecipe) && !(r instanceof MechanicalCraftingRecipe)
-						&& MechanicalPressTileEntity.canCompress(r) && !AllRecipeTypes.shouldIgnoreInAutomation(r),
-					BasinRecipe::convertShapeless)
-				.catalyst(AllBlocks.MECHANICAL_PRESS::get)
-				.catalyst(AllBlocks.BASIN::get)
-				.enableWhen(c -> c.allowShapedSquareInPress)
-				.build(),
+				autoSquare = register("automatic_packing", PackingCategory::autoSquare)
+						.addAllRecipesIf(
+								r -> (r instanceof CraftingRecipe) && !(r instanceof MechanicalCraftingRecipe)
+										&& MechanicalPressTileEntity.canCompress(r) && !AllRecipeTypes.shouldIgnoreInAutomation(r),
+								BasinRecipe::convertShapeless)
+						.catalyst(AllBlocks.MECHANICAL_PRESS::get)
+						.catalyst(AllBlocks.BASIN::get)
+						.enableWhen(c -> c.allowShapedSquareInPress)
+						.build(),
 
-			polishing = register("sandpaper_polishing", PolishingCategory::new)
-				.addTypedRecipes(AllRecipeTypes.SANDPAPER_POLISHING)
-				.catalyst(AllItems.SAND_PAPER::get)
-				.catalyst(AllItems.RED_SAND_PAPER::get)
-				.build(),
+				polishing = register("sandpaper_polishing", PolishingCategory::new)
+						.addTypedRecipes(AllRecipeTypes.SANDPAPER_POLISHING)
+						.catalyst(AllItems.SAND_PAPER::get)
+						.catalyst(AllItems.RED_SAND_PAPER::get)
+						.build(),
 
-			deploying = register("deploying", DeployingCategory::new).addTypedRecipes(AllRecipeTypes.DEPLOYING)
-				.addTypedRecipes(AllRecipeTypes.SANDPAPER_POLISHING::getType, DeployerApplicationRecipe::convert)
-				.catalyst(AllBlocks.DEPLOYER::get)
-				.catalyst(AllBlocks.DEPOT::get)
-				.catalyst(AllItems.BELT_CONNECTOR::get)
-				.build(),
+				item_application = register("item_application", ItemApplicationCategory::new)
+						.addTypedRecipes(AllRecipeTypes.ITEM_APPLICATION)
+						.addRecipes(LogStrippingFakeRecipes::createRecipes)
+						.build(),
 
-			mysteryConversion = register("mystery_conversion", MysteriousItemConversionCategory::new)
-				.addRecipes(() -> MysteriousItemConversionCategory.RECIPES)
-				.build(),
+				deploying = register("deploying", DeployingCategory::new).addTypedRecipes(AllRecipeTypes.DEPLOYING)
+						.addTypedRecipes(AllRecipeTypes.SANDPAPER_POLISHING::getType, DeployerApplicationRecipe::convert)
+						.addTypedRecipes(AllRecipeTypes.ITEM_APPLICATION::getType, ManualApplicationRecipe::asDeploying)
+						.catalyst(AllBlocks.DEPLOYER::get)
+						.catalyst(AllBlocks.DEPOT::get)
+						.catalyst(AllItems.BELT_CONNECTOR::get)
+						.build(),
 
-			spoutFilling = register("spout_filling", SpoutCategory::new).addTypedRecipes(AllRecipeTypes.FILLING)
-				.addRecipeListConsumer(recipes -> SpoutCategory.consumeRecipes(recipes::add, ingredientManager))
-				.catalyst(AllBlocks.SPOUT::get)
-				.build(),
+				mysteryConversion = register("mystery_conversion", MysteriousItemConversionCategory::new)
+						.addRecipes(() -> MysteriousItemConversionCategory.RECIPES)
+						.build(),
 
-			draining = register("draining", ItemDrainCategory::new)
-				.addRecipeListConsumer(recipes -> ItemDrainCategory.consumeRecipes(recipes::add, ingredientManager))
-				.addTypedRecipes(AllRecipeTypes.EMPTYING)
-				.catalyst(AllBlocks.ITEM_DRAIN::get)
-				.build(),
+				spoutFilling = register("spout_filling", SpoutCategory::new).addTypedRecipes(AllRecipeTypes.FILLING)
+						.addRecipeListConsumer(recipes -> SpoutCategory.consumeRecipes(recipes::add, ingredientManager))
+						.catalyst(AllBlocks.SPOUT::get)
+						.build(),
 
-			autoShaped = register("automatic_shaped", MechanicalCraftingCategory::new)
-				.addAllRecipesIf(r -> r instanceof CraftingRecipe && !(r instanceof IShapedRecipe<?>)
-					&& r.getIngredients()
-						.size() == 1
-					&& !AllRecipeTypes.shouldIgnoreInAutomation(r))
-				.addTypedRecipesIf(() -> RecipeType.CRAFTING,
-					recipe -> recipe instanceof IShapedRecipe<?> && !AllRecipeTypes.shouldIgnoreInAutomation(recipe))
-				.catalyst(AllBlocks.MECHANICAL_CRAFTER::get)
-				.enableWhen(c -> c.allowRegularCraftingInCrafter)
-				.build(),
+				draining = register("draining", ItemDrainCategory::new)
+						.addRecipeListConsumer(recipes -> ItemDrainCategory.consumeRecipes(recipes::add, ingredientManager))
+						.addTypedRecipes(AllRecipeTypes.EMPTYING)
+						.catalyst(AllBlocks.ITEM_DRAIN::get)
+						.build(),
 
-			mechanicalCrafting = register("mechanical_crafting", MechanicalCraftingCategory::new)
-				.addTypedRecipes(AllRecipeTypes.MECHANICAL_CRAFTING)
-				.catalyst(AllBlocks.MECHANICAL_CRAFTER::get)
-				.build();
+				autoShaped = register("automatic_shaped", MechanicalCraftingCategory::new)
+						.addAllRecipesIf(r -> r instanceof CraftingRecipe && !(r instanceof IShapedRecipe<?>)
+								&& r.getIngredients()
+								.size() == 1
+								&& !AllRecipeTypes.shouldIgnoreInAutomation(r))
+						.addTypedRecipesIf(() -> RecipeType.CRAFTING,
+								recipe -> recipe instanceof IShapedRecipe<?> && !AllRecipeTypes.shouldIgnoreInAutomation(recipe))
+						.catalyst(AllBlocks.MECHANICAL_CRAFTER::get)
+						.enableWhen(c -> c.allowRegularCraftingInCrafter)
+						.build(),
+
+				mechanicalCrafting = register("mechanical_crafting", MechanicalCraftingCategory::new)
+						.addTypedRecipes(AllRecipeTypes.MECHANICAL_CRAFTING)
+						.catalyst(AllBlocks.MECHANICAL_CRAFTER::get)
+						.build();
 
 	}
 
 	private <T extends Recipe<?>> CategoryBuilder<T> register(String name, Supplier<CreateRecipeCategory<T>> supplier) {
-		return new CategoryBuilder<T>(name, supplier);
+		return new CategoryBuilder<>(name, supplier);
 	}
 
 	@Override
@@ -242,7 +252,7 @@ public class CreateJEI implements IModPlugin {
 
 	@Override
 	public void registerRecipeTransferHandlers(IRecipeTransferRegistration registration) {
-		registration.addRecipeTransferHandler(new BlueprintTransferHandler(), VanillaRecipeCategoryUid.CRAFTING);
+		registration.addRecipeTransferHandler(new BlueprintTransferHandler(), RecipeTypes.CRAFTING);
 	}
 
 	@Override
@@ -262,15 +272,15 @@ public class CreateJEI implements IModPlugin {
 	@Override
 	public void registerRecipes(IRecipeRegistration registration) {
 		ingredientManager = registration.getIngredientManager();
-		allCategories.forEach(c -> c.recipes.forEach(s -> registration.addRecipes(s.get(), c.getUid())));
 
-		registration.addRecipes(ToolboxColoringRecipeMaker.createRecipes()
-			.collect(Collectors.toList()), VanillaRecipeCategoryUid.CRAFTING);
+		allCategories.forEach(c -> c.registerRecipes(registration));
+
+		registration.addRecipes(RecipeTypes.CRAFTING, ToolboxColoringRecipeMaker.createRecipes().toList());
 	}
 
 	@Override
 	public void registerRecipeCatalysts(IRecipeCatalystRegistration registration) {
-		allCategories.forEach(c -> c.recipeCatalysts.forEach(s -> registration.addRecipeCatalyst(s.get(), c.getUid())));
+		allCategories.forEach(c -> c.recipeCatalysts.forEach(s -> registration.addRecipeCatalyst(s.get(), c.getRecipeType())));
 	}
 
 	@SuppressWarnings({ "unchecked", "rawtypes" })
@@ -281,32 +291,34 @@ public class CreateJEI implements IModPlugin {
 		registration.addGhostIngredientHandler(AbstractFilterScreen.class, new GhostIngredientHandler());
 		registration.addGhostIngredientHandler(BlueprintScreen.class, new GhostIngredientHandler());
 		registration.addGhostIngredientHandler(LinkedControllerScreen.class, new GhostIngredientHandler());
+		registration.addGhostIngredientHandler(ScheduleScreen.class, new GhostIngredientHandler());
 	}
 
 	private class CategoryBuilder<T extends Recipe<?>> {
-		private CreateRecipeCategory<T> category;
-		private List<Consumer<List<Recipe<?>>>> recipeListConsumers = new ArrayList<>();
-		private Predicate<CRecipes> pred;
+		private final CreateRecipeCategory<T> category;
+		private final List<Consumer<List<T>>> recipeListConsumers = new ArrayList<>();
+		private Predicate<CRecipes> predicate;
 
 		public CategoryBuilder(String name, Supplier<CreateRecipeCategory<T>> category) {
 			this.category = category.get();
 			this.category.setCategoryId(name);
-			pred = Predicates.alwaysTrue();
+			mezz.jei.api.recipe.RecipeType<T> recipeType = this.category.getRecipeType();
+			predicate = cRecipes -> true;
 		}
 
-		public CategoryBuilder<T> addRecipeListConsumer(Consumer<List<Recipe<?>>> consumer) {
+		public CategoryBuilder<T> addRecipeListConsumer(Consumer<List<T>> consumer) {
 			recipeListConsumers.add(consumer);
 			return this;
 		}
 
-		public CategoryBuilder<T> addRecipes(Supplier<Collection<? extends Recipe<?>>> collection) {
+		public CategoryBuilder<T> addRecipes(Supplier<Collection<? extends T>> collection) {
 			return addRecipeListConsumer(recipes -> recipes.addAll(collection.get()));
 		}
 
 		public CategoryBuilder<T> addAllRecipesIf(Predicate<Recipe<?>> pred) {
 			return addRecipeListConsumer(recipes -> consumeAllRecipes(recipe -> {
 				if (pred.test(recipe)) {
-					recipes.add(recipe);
+					recipes.add((T) recipe);
 				}
 			}));
 		}
@@ -324,19 +336,15 @@ public class CreateJEI implements IModPlugin {
 		}
 
 		public CategoryBuilder<T> addTypedRecipes(Supplier<RecipeType<? extends T>> recipeType) {
-			return addRecipeListConsumer(recipes -> consumeTypedRecipes(recipes::add, recipeType.get()));
+			return addRecipeListConsumer(recipes -> CreateJEI.<T>consumeTypedRecipes(recipes::add, recipeType.get()));
 		}
 
-		public CategoryBuilder<T> addTypedRecipes(Supplier<RecipeType<? extends T>> recipeType,
-			Function<Recipe<?>, T> converter) {
-			return addRecipeListConsumer(recipes -> consumeTypedRecipes(recipe -> {
-				recipes.add(converter.apply(recipe));
-			}, recipeType.get()));
+		public CategoryBuilder<T> addTypedRecipes(Supplier<RecipeType<? extends T>> recipeType, Function<Recipe<?>, T> converter) {
+			return addRecipeListConsumer(recipes -> CreateJEI.<T>consumeTypedRecipes(recipe -> recipes.add(converter.apply(recipe)), recipeType.get()));
 		}
 
-		public CategoryBuilder<T> addTypedRecipesIf(Supplier<RecipeType<? extends T>> recipeType,
-			Predicate<Recipe<?>> pred) {
-			return addRecipeListConsumer(recipes -> consumeTypedRecipes(recipe -> {
+		public CategoryBuilder<T> addTypedRecipesIf(Supplier<RecipeType<? extends T>> recipeType, Predicate<Recipe<?>> pred) {
+			return addRecipeListConsumer(recipes -> CreateJEI.<T>consumeTypedRecipes(recipe -> {
 				if (pred.test(recipe)) {
 					recipes.add(recipe);
 				}
@@ -347,7 +355,7 @@ public class CreateJEI implements IModPlugin {
 			Supplier<RecipeType<? extends T>> excluded) {
 			return addRecipeListConsumer(recipes -> {
 				List<Recipe<?>> excludedRecipes = getTypedRecipes(excluded.get());
-				consumeTypedRecipes(recipe -> {
+				CreateJEI.<T>consumeTypedRecipes(recipe -> {
 					for (Recipe<?> excludedRecipe : excludedRecipes) {
 						if (doInputsMatch(recipe, excludedRecipe)) {
 							return;
@@ -383,21 +391,20 @@ public class CreateJEI implements IModPlugin {
 		}
 
 		public CategoryBuilder<T> enableWhen(Function<CRecipes, ConfigBool> configValue) {
-			pred = c -> configValue.apply(c)
-				.get();
+			predicate = c -> configValue.apply(c).get();
 			return this;
 		}
 
 		public CategoryBuilder<T> enableWhenBool(Function<CRecipes, Boolean> configValue) {
-			pred = configValue::apply;
+			predicate = configValue::apply;
 			return this;
 		}
 
 		public CreateRecipeCategory<T> build() {
-			if (pred.test(AllConfigs.SERVER.recipes))
+			if (predicate.test(AllConfigs.SERVER.recipes))
 				category.recipes.add(() -> {
-					List<Recipe<?>> recipes = new ArrayList<>();
-					for (Consumer<List<Recipe<?>>> consumer : recipeListConsumers)
+					List<T> recipes = new ArrayList<>();
+					for (Consumer<List<T>> consumer : recipeListConsumers)
 						consumer.accept(recipes);
 					return recipes;
 				});
@@ -415,13 +422,12 @@ public class CreateJEI implements IModPlugin {
 			.forEach(consumer);
 	}
 
-	public static void consumeTypedRecipes(Consumer<Recipe<?>> consumer, RecipeType<?> type) {
+	public static <T extends Recipe<?>> void consumeTypedRecipes(Consumer<T> consumer, RecipeType<?> type) {
 		Map<ResourceLocation, Recipe<?>> map = Minecraft.getInstance()
 			.getConnection()
 			.getRecipeManager().recipes.get(type);
 		if (map != null) {
-			map.values()
-				.forEach(consumer);
+			map.values().forEach(recipe -> consumer.accept((T) recipe));
 		}
 	}
 
@@ -450,11 +456,9 @@ public class CreateJEI implements IModPlugin {
 		if (matchingStacks.length == 0) {
 			return false;
 		}
-		if (recipe2.getIngredients()
-			.get(0)
-			.test(matchingStacks[0]))
-			return true;
-		return false;
+		return recipe2.getIngredients()
+				.get(0)
+				.test(matchingStacks[0]);
 	}
 
 }
